# memex

./: .env.template  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: build_docker.yml  check.yml
example_docs/: state_of_the_union_2023.json  state_of_the_union_2023.txt
examples/clippy/: Cargo.toml  config.toml
examples/clippy/src/: config.rs  lib.rs  main.rs
fixtures/: sample_json_schema.json  sample_yelp_review.txt
lib/api/: Cargo.toml
lib/api/src/: filters.rs  handlers.rs  lib.rs  schema.rs
lib/api/src/endpoints/: mod.rs
lib/api/src/endpoints/actions/: filters.rs  handlers.rs
lib/api/src/endpoints/collections/: filters.rs  handlers.rs
lib/api/src/endpoints/fetch/: filters.rs  handlers.rs
lib/api/src/endpoints/tasks/: filters.rs  handlers.rs  mod.rs
lib/embedder/: Cargo.toml
lib/embedder/src/: lib.rs
lib/libmemex/: Cargo.toml
lib/libmemex/prompts/json_schema/: prompt.txt  system.txt
lib/libmemex/prompts/summarize/: prompt.txt  system.txt
lib/libmemex/src/: embedding.rs  lib.rs
lib/libmemex/src/db/: document.rs  embedding.rs  mod.rs  queue.rs
lib/libmemex/src/llm/: embedding.rs  mod.rs  prompter.rs
lib/libmemex/src/llm/local/: mod.rs  schema.rs
lib/libmemex/src/llm/openai/: mod.rs  schema.rs
lib/libmemex/src/llm/prompts/json_schema/: prompt.txt
lib/libmemex/src/storage/: local.rs  mod.rs  opensearch.rs  qdrant.rs
lib/libmemex/src/vector/: mod.rs
lib/shared/: Cargo.toml
lib/shared/src/db/: document.rs  mod.rs  queue.rs
lib/shared/src/vector/: local.rs  mod.rs
lib/sherpa/: Cargo.toml
lib/sherpa/src/: lib.rs
lib/worker/: Cargo.toml
lib/worker/src/: lib.rs  storage.rs  tasks.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230919_115012_create_embedding_table.rs  m20230920_114744_add_task_type_column.rs  m20231002_201128_add_output_column.rs
resources/: clippy_prompt.txt  config.gpt4all.toml  config.llama2.toml  config.toml  config.vicuna.toml  prompt.txt
