# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "bin/sightglass",

    "lib/api",
    "lib/indexer",
]

[workspace.dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
