# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "bin/sightglass",

    "lib/api",
    "lib/embedder",
    "lib/shared",
    "lib/worker",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.68"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4"
sea-orm = { version = "0.11", features = ["macros", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "with-chrono", "with-json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
