[package]
name = "clippy"
version = "0.1.0"
edition = "2021"
# Should be ignored in bin checks since this is an example
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0"
llm = "0.1.1"
reqwest = "0.11.18"
tokio = "1.0"

[[example]]
name = "clippy"
path = "src/main.rs"
