[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { workspace = true }
dotenv_codegen = { workspace = true }
log = { workspace = true }
rust-bert = { version = "0.21.0", features = ["download-libtorch"] }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "1.0"
tokio = { workspace = true }
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
warp = "0.3.3"
qdrant-client = "1.2.0"

embedder = { path = "../embedder" }
shared = { path = "../shared" }