[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
dotenv = { workspace = true }
dotenv_codegen = { workspace = true }
futures-util = "0.3.28"
jsonschema = "0.17.1"
log = { workspace = true }
qdrant-client = "1.2.0"
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "1.0"
tokio = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
url = "2.4.1"
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
warp = "0.3.3"

libmemex = { path = "../libmemex" }