[package]
name = "embedder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = { workspace = true }
rust-bert = { version = "0.21.0", features= ["download-libtorch"] }
thiserror = "1.0"
tokenizers = "0.13.3"
tokio = { workspace = true }