[package]
name = "libmemex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
hnsw_rs = { git = "https://github.com/jean-pierreBoth/hnswlib-rs", rev = "52a7f9174e002820d168fa65ca7303364ee3ac33" }
log = { workspace = true }
migration ={ path = "../../migration" }
opensearch = "2.1.0"
qdrant-client = "1.2.0"
rust-bert = { version = "0.21.0", features= ["download-libtorch"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"
tokenizers = "=0.13.3"
tokio = { workspace = true }
url = "2.4.0"
