[package]
name = "libmemex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
handlebars = "4.4.0"
hnsw_rs = { git = "https://github.com/jean-pierreBoth/hnswlib-rs", rev = "52a7f9174e002820d168fa65ca7303364ee3ac33" }
log = { workspace = true }
migration ={ path = "../../migration" }
opensearch = "2.1.0"
qdrant-client = "1.2.0"
reqwest = { version = "0.11.16", features = ["stream" ] }
rust-bert = { version = "0.21.0", features= ["download-libtorch"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"
tiktoken-rs = "0.5.4"
tokenizers = { version = "0.14", features = ["http"] }
tokio = { workspace = true }
url = "2.4.0"
uuid = { workspace = true }
