[package]
name = "libmemex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
handlebars = "4.4.0"
hnsw_rs = { git = "https://github.com/jean-pierreBoth/hnswlib-rs", rev = "52a7f9174e002820d168fa65ca7303364ee3ac33" }
llm = { git = "https://github.com/rustformers/llm.git", rev = "84800b02a7a96f62c0c9c03a38c36cb23bf4b2ec" }
log = { workspace = true }
migration ={ path = "../../migration" }
opensearch = "2.1.0"
qdrant-client = "1.2.0"
reqwest = { version = "0.11.16", features = ["stream" ] }
rand = "0.8.5"
rust-bert = { version = "0.21.0", features= ["download-libtorch"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sherpa = { path = "../sherpa" }
strum = "0.25"
strum_macros = "0.25"
tera = "1.19.0"
thiserror = "1.0"
tiktoken-rs = "0.5.4"
tokenizers = { version = "0.14", features = ["http"] }
tokio = { workspace = true }
toml = "0.7.4"
url = "2.4.0"
uuid = { workspace = true }