[package]
name = "sherpa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = { workspace = true }
llm = { git = "https://github.com/rustformers/llm.git", rev = "84800b02a7a96f62c0c9c03a38c36cb23bf4b2ec" }
log = { workspace = true }
rand = "0.8.5"
rust-bert = { version = "0.21.0", features= ["download-libtorch"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = "0.25"
strum_macros = "0.25"
tera = "1.19.0"
thiserror = "1.0"
tokenizers = { version = "0.14", features = ["http"] }
tokio = { workspace = true }
toml = "0.8.0"
