[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
qdrant-client = "1.2.0"
sea-orm = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.3.1", default-features = false, features = ["serde", "v5"] }
embedder = { path = "../embedder" }
shared = { path = "../shared" }